# Device2Device

./: .gitignore  .gitmodules  .travis.yml  README.md  azure-pipelines.yml  build.gradle  build.sh  gradle.properties  settings.gradle
.github/workflows/: android.yml
IPCroid/: settings.gradle
IPCroid/app/src/main/cpp/: CMakeLists.txt
IPCroid/app/src/main/cpp/callback/: CMakeLists.txt
IPCroid/gradle/wrapper/: gradle-wrapper.properties
PlayMusic/: SerialConn.ino  yimengshan.ino
SerialConn/: .gitignore  build.gradle  gradle.properties
SerialConn/app/: build.gradle
SerialConn/app/src/main/: AndroidManifest.xml
SerialConn/app/src/main/res/anim/: animation.xml
SerialConn/app/src/main/res/layout/: activity_begin.xml  activity_commit.xml  activity_main.xml  activity_more.xml  activity_start.xml  activity_thank.xml  activity_transfer.xml  chart_float.xml  chart_view.xml  device_item.xml  device_list.xml  device_name.xml  float_text.xml  float_window.xml
SerialConn/app/src/main/res/menu/: menu_item.xml
SerialConn/app/src/main/res/values/: colors.xml  strings.xml
SerialConn/app/src/main/res/values-v21/: styles.xml
SerialConn/gradle/wrapper/: gradle-wrapper.properties
YongShuo/app/: app-release.apk  build.gradle  proguard-rules.pro
YongShuo/app/src/main/: AndroidManifest.xml
YongShuo/app/src/main/appcompat_v7/libs/: android-support-v4.jar.properties  android-support-v7-appcompat.jar.properties
YongShuo/app/src/main/res/drawable/: active_bkg.xml  background_tab.xml  ic_drawer_follow.xml  ic_drawer_home.xml  ic_drawer_login.xml  ic_drawer_question.xml  progress_bar_states.xml  text_color_primary_invertible.xml
YongShuo/app/src/main/res/layout/: activity_about.xml  activity_main.xml  activity_material_navigation_drawer.xml  activity_material_navigation_drawer_customheader.xml  activity_setting.xml  activty_browser.xml  drawer_list_item.xml  fragment_chart.xml  fragment_navigation_drawer.xml  fragment_viewpager.xml  gatt_service_character.xml  item_list.xml  layout_material_section_icon_large_ripple.xml  layout_material_section_ripple.xml  list_bottom.xml  list_header.xml  list_view.xml  toolbar.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniFuncImpl.cpp  JniMethods.cpp  JniMethods.h  jniComm.cpp  jniComm.h
app/src/main/cpp/audio/: CMakeLists.txt
app/src/main/cpp/binfile/: CMakelists.txt  bitmap.h
app/src/main/cpp/bitfile/: CMakelists.txt
app/src/main/cpp/bitmap/: CMakelists.txt  bitmap.c
app/src/main/cpp/callback/: CMakeLists.txt  CallJavaMethod.cpp  CallJavaMethod.h  JavaFuncCalls.cpp  JavaFuncCalls.h  JniFuncImpl.cpp
app/src/main/cpp/codec/: CMakelists.txt  NativeCodec.cpp
app/src/main/cpp/common/: logger.h  statics.h
app/src/main/cpp/convert/: CMakeLists.txt  Pcm2Wav.h
app/src/main/cpp/decode/: Pcm2Wav.cpp  Pcm2Wav.h  Yuv2Rgb.cpp  Yuv2Rgb.h
app/src/main/cpp/display/: CMakelists.txt  CpuRenderView.cpp
app/src/main/cpp/display/cpu/: CpuRenderView.cpp  CpuRenderView.h
app/src/main/cpp/display/gles/: EglGpuRender.cpp  EglShader.cpp  EglShader.h  EglTexture.cpp  EglTexture.h
app/src/main/cpp/file/: CMakeLists.txt  Pcm2Wav.cpp  Pcm2Wav.h
app/src/main/cpp/files/: CMakeLists.txt  CMakelists.txt  FileUtils.cpp  FileUtils.h  Pcm2Wav.cpp  bitmap.c  bitmap.h  texture.c  texture.h
app/src/main/cpp/filetools/: CMakeLists.txt
app/src/main/cpp/gles/: CMakelists.txt  CpuTextureView.cpp  CpuTextureView.h  EglGpuRender.cpp  EglGpuRender.h  EglShader.cpp  EglShader.h  EglSurface.cpp  EglSurface.h  EglTexture.h  TextureView.cpp  TextureView.h
app/src/main/cpp/kaics/: CMakeLists.txt  KaiSocket.h
app/src/main/cpp/kaics/kaics/: KaiSocket.h
app/src/main/cpp/kaics/utils/: logging.h
app/src/main/cpp/message/: Message.cpp  Message.h
app/src/main/cpp/network/: CMakeLists.txt  KcpEmulator.cpp  KcpEmulator.h  KcpSocket.cpp  KcpSocket.h  SocketNet.cpp  SocketNet.h  SocketTrans.cpp  SocketTrans.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h
app/src/main/cpp/network/kcp/: ikcp.c  ikcp.h
app/src/main/cpp/render/: CMakelists.txt  CpuRenderView.cpp  CpuRenderView.h
app/src/main/cpp/render/gles/: EglGpuRender.cpp  EglGpuRender.h  EglShader.cpp  EglShader.h  EglTexture.cpp  EglTexture.h
app/src/main/cpp/runtime/: CMakeLists.txt  TimeStamp.cpp  TimeStamp.h
app/src/main/cpp/socket/: CMakeLists.txt  FileMsgSocket.cpp  FileMsgSocket.h  KcpEmulator.cpp  KcpEmulator.h  KcpSocket.cpp  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp
app/src/main/cpp/template/: Base.hpp  CMakelists.txt  Clazz1.cpp  Clazz1.h  Clazz2.cpp  Clazz2.h
app/src/main/cpp/test/: CMakeLists.txt  FileMsgSocketTest.cpp  FileMsgSocketTest.h
app/src/main/cpp/texture/: TextureView.cpp  TextureView.h
app/src/main/cpp/time/: CMakeLists.txt  TimeStamp.cpp  TimeStamp.h
app/src/main/cpp/utils/: FileUtils.cpp  FileUtils.h  logger.h  logging.h  statics.h
app/src/main/jni/: jniInc.h
app/src/main/res/anim/: auth.xml  slide_in_left.xml  slide_in_right.xml
app/src/main/res/color/: button_tint.xml
app/src/main/res/drawable/: bg_border.xml  border.xml  edit_bkg.xml  ic_close_small.xml  ic_dropdown_arrow.xml  msg_received.xml  msg_sent.xml  spinner_bkg.xml
app/src/main/res/layout/: activity_colored_lines.xml  activity_commit.xml  activity_entry.xml  activity_graph.xml  activity_layout.xml  activity_main.xml  activity_publish.xml  activity_sensor.xml  activity_subscribe.xml  activity_texture.xml  activity_thank.xml  activity_wave.xml  chart_float.xml  dialog_chat.xml  dialog_chat_box.xml  dialog_file_msg.xml  dialog_publish.xml  dialog_publisher.xml  dialog_subscribe.xml  dialog_view_chart.xml  dialog_view_text.xml  float_text.xml  histogram.xml  item_msg_received.xml  item_msg_sent.xml  spinner_dropdown_item.xml  spinner_selected_item.xml  subscribe.xml  text_float.xml  view_chart.xml
app/src/main/res/menu/: options.xml
app/src/main/res/values/: arrays.xml  colors.xml  colours.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
(+230 files in other folders)
